[package]
name = "minterpolate"
version = "0.4.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/minterpolate.git"
homepage = "https://github.com/rustgd/minterpolate"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/minterpolate"
description = "Data set interpolation for mint primitives and raw arrays"

keywords = ["gamedev", "mint", "interpolation"]

[dependencies]
mint = "0.5"
num = "0"
serde = { version = "1.0", features = ["derive"], optional = true }
